--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1,3 +1,11 @@
+html {
+    position: relative;
+    min-height: 100%;
+}
+
+body {
+    margin-bottom: 60px;
+}
 
 #wrapper {
   text-align: center;
@@ -68,7 +76,7 @@ body {
 	color: rgba(0,0,0,0.87); 
 	font-family: Roboto, Helvetica, Arial, sans-serif; 
 	margin: 0; 
-	padding: 0; 
+	padding: 0;
 }
 
 #message { 
